Added midpoint quadrature using for loop

--- a/assignment-2/midpt_timings.ipynb
+++ b/assignment-2/midpt_timings.ipynb
@@ -16,12 +16,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def midpt_for(f, interval, N_pts):\n",
+    "    a, b = interval\n",
+    "    h = (b - a) / float(N_pts)\n",
+    "    est = 0.0\n",
+    "    for k in range(1, N_pts+1):\n",
+    "        x_k = a + (k-0.5)*h\n",
+    "        est += f(x_k)\n",
+    "    return h * est"
+   ]
   }
  ],
  "metadata": {
