Added midpoint quadrature using numpy ndarray

--- a/assignment-2/midpt_timings.ipynb
+++ b/assignment-2/midpt_timings.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -30,6 +30,25 @@
     "        x_k = a + (k-0.5)*h\n",
     "        est += f(x_k)\n",
     "    return h * est"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def midpt_np(f, interval, N_pts):\n",
+    "    a, b = interval\n",
+    "    h = (b - a) / float(N_pts)\n",
+    "    # Numpy array of all x_k values\n",
+    "    x_k = np.arange(1, N_pts+1)\n",
+    "    # Apply universal functions to numpy array\n",
+    "    x_k = a + (x_k-0.5)*h\n",
+    "    x_k = f(x_k)\n",
+    "    return h * np.sum(x_k)"
    ]
   }
  ],
